creacion de sandwich + cambios en index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,158 +5,5 @@
 @import "./base/reset";
 @import "./layout/body";
 @import "./layout/header";
-
-.main-index{
-    width: 100%;
-    height: 960px;
-    background-color: $background-principal;
-    section{
-        display: grid;
-        width: 100%;
-        justify-content: center;
-        grid-template-columns: repeat(2,31.25rem);
-        grid-template-rows: 25rem 25rem;
-        grid-template-areas: 
-        "sand papa"
-        "tort lomi"
-        ;
-        gap: 1.875rem;
-        padding-top: 4.375rem;
-        .card-1{
-            grid-area: sand;
-            width: 100%;
-            background-color:$background-secundario;
-            img{
-                width: 450px;
-                height: 260px;
-                margin-top: 1rem;
-                margin-left: 1.5625rem;
-            }
-            h2{
-                color: white;
-                text-align: center;
-                font-family: 'Hind Madurai', sans-serif;
-                font-weight: bold;
-                font-size: 2.8125rem;
-            }
-            div{
-                width: 6.25rem;
-                height: 2.1875rem;
-                background-color: white;
-                border-radius: .1875rem;
-                text-align: center;
-                margin-left: 12.1875rem;
-                margin-top: 1.25rem;
-                a{
-                    font-family: 'Hind Madurai', sans-serif;
-                    font-weight: 600;
-                    font-size: 1.375rem;
-                    text-decoration: none;
-                    color: black;
-                }
-            }
-        }
-        .card-2{
-            grid-area: papa;
-            width: 100%;
-            background-color:$background-secundario;
-            img{
-                width: 450px;
-                height: 260px;
-                margin-top: 1rem;
-                margin-left: 1.5625rem;
-            }
-            h2{
-                color: white;
-                text-align: center;
-                font-family: 'Hind Madurai', sans-serif;
-                font-weight: bold;
-                font-size: 2.8125rem;
-            }
-            div{
-                width: 6.25rem;
-                height: 2.1875rem;
-                background-color: white;
-                border-radius: .1875rem;
-                text-align: center;
-                margin-left: 12.1875rem;
-                margin-top: 1.25rem;
-                a{
-                    font-family: 'Hind Madurai', sans-serif;
-                    font-weight: 600;
-                    font-size: 1.375rem;
-                    text-decoration: none;
-                    color: black;
-                }
-            }
-        }
-        .card-3{
-            grid-area: tort;
-            width: 100%;
-            background-color:$background-secundario;
-            img{
-                width: 450px;
-                height: 260px;
-                margin-top: 1rem;
-                margin-left: 1.5625rem;
-            }
-            h2{
-                color: white;
-                text-align: center;
-                font-family: 'Hind Madurai', sans-serif;
-                font-weight: bold;
-                font-size: 2.8125rem;
-            }
-            div{
-                width: 6.25rem;
-                height: 2.1875rem;
-                background-color: white;
-                border-radius: .1875rem;
-                text-align: center;
-                margin-left: 12.1875rem;
-                margin-top: 1.25rem;
-                a{
-                    font-family: 'Hind Madurai', sans-serif;
-                    font-weight: 600;
-                    font-size: 1.375rem;
-                    text-decoration: none;
-                    color: black;
-                }
-            }
-        }
-        .card-4{
-            grid-area: lomi;
-            width: 100%;
-            background-color:$background-secundario;
-            img{
-                width: 450px;
-                height: 260px;
-                margin-top: 1rem;
-                margin-left: 1.5625rem;
-            }
-            h2{
-                color: white;
-                text-align: center;
-                font-family: 'Hind Madurai', sans-serif;
-                font-weight: bold;
-                font-size: 2.8125rem;
-            }
-            div{
-                width: 6.25rem;
-                height: 2.1875rem;
-                background-color: white;
-                border-radius: .1875rem;
-                text-align: center;
-                margin-left: 12.1875rem;
-                margin-top: 1.25rem;
-                a{
-                    font-family: 'Hind Madurai', sans-serif;
-                    font-weight: 600;
-                    font-size: 1.375rem;
-                    text-decoration: none;
-                    color: black;
-                }
-            }
-        }
-    }
-}
+@import "./layout/main-index";
+@import "./layout/main-sandwiches"
