--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,29 @@ header .navbar-brand:hover {
 
 .main-index {
   width: 100%;
-  height: 960px;
+  padding-bottom: 1.25rem;
   background-color: #1D1C1C;
+}
+.main-index .div-h1 {
+  display: flex;
+  justify-content: center;
+  padding-top: 3.75rem;
+  text-align: center;
+}
+.main-index .div-h1 h1 {
+  padding-top: 0.9375rem;
+  background-color: white;
+  font-family: "Jockey One", sans-serif;
+  font-weight: 700;
+  width: 50%;
+  height: 5rem;
+  letter-spacing: 0.375rem;
 }
 .main-index section {
   display: grid;
   width: 100%;
   justify-content: center;
-  grid-template-columns: repeat(2, 31.25rem);
+  grid-template-columns: repeat(2, 28.125rem);
   grid-template-rows: 25rem 25rem;
   grid-template-areas: "sand papa" "tort lomi";
   gap: 1.875rem;
@@ -56,8 +71,8 @@ header .navbar-brand:hover {
   background-color: #FF0303;
 }
 .main-index section .card-1 img {
-  width: 450px;
-  height: 260px;
+  width: 25rem;
+  height: 16.25rem;
   margin-top: 1rem;
   margin-left: 1.5625rem;
 }
@@ -74,7 +89,7 @@ header .navbar-brand:hover {
   background-color: white;
   border-radius: 0.1875rem;
   text-align: center;
-  margin-left: 12.1875rem;
+  margin-left: 10.625rem;
   margin-top: 1.25rem;
 }
 .main-index section .card-1 div a {
@@ -90,8 +105,8 @@ header .navbar-brand:hover {
   background-color: #FF0303;
 }
 .main-index section .card-2 img {
-  width: 450px;
-  height: 260px;
+  width: 25rem;
+  height: 16.25rem;
   margin-top: 1rem;
   margin-left: 1.5625rem;
 }
@@ -108,7 +123,7 @@ header .navbar-brand:hover {
   background-color: white;
   border-radius: 0.1875rem;
   text-align: center;
-  margin-left: 12.1875rem;
+  margin-left: 10.625rem;
   margin-top: 1.25rem;
 }
 .main-index section .card-2 div a {
@@ -124,8 +139,8 @@ header .navbar-brand:hover {
   background-color: #FF0303;
 }
 .main-index section .card-3 img {
-  width: 450px;
-  height: 260px;
+  width: 25rem;
+  height: 16.25rem;
   margin-top: 1rem;
   margin-left: 1.5625rem;
 }
@@ -142,7 +157,7 @@ header .navbar-brand:hover {
   background-color: white;
   border-radius: 0.1875rem;
   text-align: center;
-  margin-left: 12.1875rem;
+  margin-left: 10.625rem;
   margin-top: 1.25rem;
 }
 .main-index section .card-3 div a {
@@ -158,8 +173,8 @@ header .navbar-brand:hover {
   background-color: #FF0303;
 }
 .main-index section .card-4 img {
-  width: 450px;
-  height: 260px;
+  width: 25rem;
+  height: 16.25rem;
   margin-top: 1rem;
   margin-left: 1.5625rem;
 }
@@ -176,7 +191,7 @@ header .navbar-brand:hover {
   background-color: white;
   border-radius: 0.1875rem;
   text-align: center;
-  margin-left: 12.1875rem;
+  margin-left: 10.625rem;
   margin-top: 1.25rem;
 }
 .main-index section .card-4 div a {
@@ -185,6 +200,151 @@ header .navbar-brand:hover {
   font-size: 1.375rem;
   text-decoration: none;
   color: black;
+}
+
+.main-sand {
+  width: 100%;
+  background-color: #1D1C1C;
+}
+.main-sand section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3.125rem;
+  gap: 3.125rem;
+}
+.main-sand section .div-1 {
+  border-radius: 0.375rem;
+  background-color: white;
+  width: 60%;
+  height: 10.9375rem;
+  display: flex;
+  flex-direction: row;
+}
+.main-sand section .div-1 img {
+  width: 44%;
+  height: 8.75rem;
+  align-self: center;
+  margin-left: 1.1875rem;
+  border-radius: 5px;
+}
+.main-sand section .div-1 div {
+  width: 100%;
+  text-align: center;
+}
+.main-sand section .div-1 div h1 {
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: 500;
+  font-size: 2.25rem;
+  padding-top: 0.3125rem;
+}
+.main-sand section .div-1 div p {
+  padding-top: 0.4375rem;
+  font-size: 1.5625rem;
+  font-weight: bold;
+}
+.main-sand section .div-1 div h3 {
+  padding-top: 1rem;
+}
+.main-sand section .div-2 {
+  border-radius: 0.375rem;
+  background-color: white;
+  width: 60%;
+  height: 10.9375rem;
+  display: flex;
+  flex-direction: row;
+}
+.main-sand section .div-2 img {
+  width: 30%;
+  height: 8.75rem;
+  align-self: center;
+  margin-left: 1.1875rem;
+  border-radius: 5px;
+}
+.main-sand section .div-2 div {
+  width: 100%;
+  text-align: center;
+}
+.main-sand section .div-2 div h2 {
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: 500;
+  font-size: 1.875rem;
+  padding-top: 0.3125rem;
+}
+.main-sand section .div-2 div p {
+  padding-top: 0.4375rem;
+  font-size: 1.5625rem;
+  font-weight: bold;
+}
+.main-sand section .div-2 div h3 {
+  padding-top: 1rem;
+}
+.main-sand section .div-3 {
+  border-radius: 0.375rem;
+  background-color: white;
+  width: 60%;
+  height: 10.9375rem;
+  display: flex;
+  flex-direction: row;
+}
+.main-sand section .div-3 img {
+  width: 30%;
+  height: 8.75rem;
+  align-self: center;
+  margin-left: 1.1875rem;
+  border-radius: 5px;
+}
+.main-sand section .div-3 div {
+  width: 100%;
+  text-align: center;
+}
+.main-sand section .div-3 div h2 {
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: 500;
+  font-size: 1.875rem;
+  padding-top: 0.3125rem;
+}
+.main-sand section .div-3 div p {
+  padding-top: 0.4375rem;
+  font-size: 1.5625rem;
+  font-weight: bold;
+}
+.main-sand section .div-3 div h3 {
+  padding-top: 1rem;
+}
+.main-sand section .div-4 {
+  border-radius: 0.375rem;
+  background-color: white;
+  width: 60%;
+  height: 10.9375rem;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px;
+}
+.main-sand section .div-4 img {
+  width: 44%;
+  height: 8.75rem;
+  align-self: center;
+  margin-left: 1.1875rem;
+  border-radius: 5px;
+}
+.main-sand section .div-4 div {
+  width: 100%;
+  text-align: center;
+}
+.main-sand section .div-4 div h2 {
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: 500;
+  font-size: 1.875rem;
+  padding-top: 0.3125rem;
+}
+.main-sand section .div-4 div p {
+  padding-top: 0.4375rem;
+  font-size: 1.5625rem;
+  font-weight: bold;
+}
+.main-sand section .div-4 div h3 {
+  padding-top: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
