--- a/scss/layout/_main-lomito.scss
+++ b/scss/layout/_main-lomito.scss
@@ -1,5 +1,4 @@
-.main-sand{
-    width: 100%;
+.main-lomito{
     background-color: $background-principal;
     section{
         display: flex;
@@ -15,7 +14,7 @@
             display: flex;
             flex-direction: row;
             img{
-                width: 36%;
+                width: 38%;
                 height: 8.75rem;
                 align-self: center;
                 margin-left: 1.1875rem;
@@ -48,7 +47,7 @@
             display: flex;
             flex-direction: row;
             img{
-                width: 26.400%;
+                width: 38%;
                 height: 8.75rem;
                 align-self: center;
                 margin-left: 1.1875rem;
@@ -81,7 +80,7 @@
             display: flex;
             flex-direction: row;
             img{
-                width: 26.400%;
+                width: 38%;
                 height: 8.75rem;
                 align-self: center;
                 margin-left: 1.1875rem;
@@ -115,7 +114,7 @@
             flex-direction: row;
             margin-bottom: 3.125rem;
             img{
-                width: 38%;
+                width: 27%;
                 height: 8.75rem;
                 align-self: center;
                 margin-left: 1.1875rem;
