--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,7 @@
 @import "./layout/body";
 @import "./layout/header";
 @import "./layout/main-index";
-@import "./layout/main-sandwiches"
+@import "./layout/main-sandwiches";
+@import "./layout/main-papas";
+@import "./layout/main-tortillas";
+@import "./layout/main-lomito";
