--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header .navbar-brand:hover {
   font-weight: 700;
   width: 50%;
   height: 5rem;
-  letter-spacing: 0.375rem;
+  letter-spacing: 0.1875rem;
 }
 .main-index section {
   display: grid;
@@ -711,6 +711,237 @@ header .navbar-brand:hover {
 }
 .main-lomito section .div-4 div h3 {
   padding-top: 1rem;
+}
+
+@media (max-width: 1024px) {
+  .main-index .div-h1 h1 {
+    width: 70%;
+  }
+  .main-index section {
+    grid-template-columns: repeat(2, 21.875rem);
+  }
+  .main-index section .card-1 img {
+    width: 18.75rem;
+    height: 14.375rem;
+  }
+  .main-index section .card-1 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-1 div {
+    margin-left: 7.8125rem;
+  }
+  .main-index section .card-2 img {
+    width: 18.75rem;
+    height: 14.375rem;
+  }
+  .main-index section .card-2 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-2 div {
+    margin-left: 7.8125rem;
+  }
+  .main-index section .card-3 img {
+    width: 18.75rem;
+    height: 14.375rem;
+  }
+  .main-index section .card-3 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-3 div {
+    margin-left: 7.8125rem;
+  }
+  .main-index section .card-4 img {
+    width: 18.75rem;
+    height: 14.375rem;
+  }
+  .main-index section .card-4 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-4 div {
+    margin-left: 7.8125rem;
+  }
+}
+@media (max-width: 768px) {
+  .main-index .div-h1 h1 {
+    width: 83%;
+  }
+  .main-index section {
+    grid-template-columns: repeat(2, 18.75rem);
+  }
+  .main-index section .card-1 {
+    height: 90%;
+  }
+  .main-index section .card-1 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-1 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-1 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-2 {
+    height: 90%;
+  }
+  .main-index section .card-2 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-2 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-2 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-3 {
+    height: 90%;
+  }
+  .main-index section .card-3 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-3 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-3 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-4 {
+    height: 90%;
+  }
+  .main-index section .card-4 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-4 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-4 div {
+    margin-left: 6.25rem;
+  }
+}
+@media (max-width: 650px) {
+  .main-index section {
+    grid-template-columns: repeat(1, 21.875rem);
+    grid-template-rows: repeat(4, 25rem);
+    grid-template-areas: "sand" "papa" "tort" "lomi";
+    gap: 0.625rem;
+  }
+  .main-index section .card-1 {
+    height: 90%;
+  }
+  .main-index section .card-1 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-1 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-1 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-2 {
+    height: 90%;
+  }
+  .main-index section .card-2 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-2 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-2 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-3 {
+    height: 90%;
+  }
+  .main-index section .card-3 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-3 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-3 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-4 {
+    height: 90%;
+  }
+  .main-index section .card-4 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-4 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-4 div {
+    margin-left: 6.25rem;
+  }
+}
+@media (max-width: 480px) {
+  .main-index .div-h1 h1 {
+    padding-top: 0.5rem;
+  }
+}
+@media (max-width: 379px) {
+  .main-index section {
+    grid-template-columns: repeat(1, 300px);
+  }
+  .main-index section .card-1 {
+    height: 90%;
+  }
+  .main-index section .card-1 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-1 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-1 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-2 {
+    height: 90%;
+  }
+  .main-index section .card-2 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-2 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-2 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-3 {
+    height: 90%;
+  }
+  .main-index section .card-3 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-3 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-3 div {
+    margin-left: 6.25rem;
+  }
+  .main-index section .card-4 {
+    height: 90%;
+  }
+  .main-index section .card-4 img {
+    width: 15.625rem;
+    height: 12.5rem;
+  }
+  .main-index section .card-4 h2 {
+    padding-top: 1rem;
+  }
+  .main-index section .card-4 div {
+    margin-left: 6.25rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
